# FutionDetect3D_ROS2

./: CMakeLists.txt  main.cpp  package.xml
doc/: fusion_detect_3d.rules  rosmaster.rules
include/: deviceManager.h  tasksManager.h  utils.h
include/car/: buzzerController.h  carMasterBase.h  carMasterNode.h
include/imu/: imuNode.h
include/lidar/: lidarConfig.h  lidarNode.h
include/nodes/: cameraNode.h  carImuNode.h  carMasterNode.h  imuNode.h  lidarImuNode.h  lidarNode.h
lib/serial/include/: serial.h  unix.h
lib/serial/src/: serial.cc  unix.cc
src/: deviceManager.cpp  tasksManager.cpp
src/car/: buzzerController.cpp  carMasterNode.cpp
src/imu/: imuNode.cpp
src/lidar/: lidarConfig.cpp  lidarNode.cpp
src/nodes/: cameraNode.cpp  carImuNode.cpp  carMasterNode.cpp  imuNode.cpp  lidarImuNode.cpp  lidarNode.cpp
